--- a/170516/Views/Administrator/ViewCustomerDetails.cshtml
+++ b/170516/Views/Administrator/ViewCustomerDetails.cshtml
@@ -14,7 +14,7 @@
                     <li><a href="@Url.Action("Index","Administrator")">Trang chủ</a></li>
                     <li class="active">Chi tiết Khách hàng</li>
                 </ol>
-                <div class="panel-title title-3">@string.Format("{0} {1}", @Model.FirstName, @Model.LastName)</div>
+                <div class="panel-title title-3">@Model.FullName</div>
             </div>
             <div class="panel-body">
                 <div class="form-horizontal">
@@ -25,7 +25,7 @@
                             <div class="form-group">
                                 <label class="col-md-3 control-label" for="ProductName">Tên Khách hàng </label>
                                 <div class="col-md-7">
-                                    <span class="info-box">@string.Format("{0} {1}", @Model.FirstName, @Model.LastName)</span>
+                                    <span class="info-box">@Model.FullName</span>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -86,6 +86,12 @@
                                 <label class="col-md-3 control-label" for="ParentID">Tỉnh/Thành phố nơi ship</label>
                                 <div class="col-md-7">
                                     <span class="info-box">@Model.ShipCity</span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-3 control-label" for="ParentID">Thông tin thêm</label>
+                                <div class="col-md-7">
+                                    <span class="info-box">@Model.AdditionalInformation</span>
                                 </div>
                             </div>
                         </div>
