--- a/170516/Views/Shared/_Layout.cshtml
+++ b/170516/Views/Shared/_Layout.cshtml
@@ -73,10 +73,12 @@
                         <div class="col-md-3 ">
                             <div class="header-left clearfix">
                                 <div id="logo" class="logo">
-                                    <a href="@Url.Action("Index", "Home")"><img id="logo_img" src="http://htmlcoder.me/preview/the_project/v.1.2/template/images/logo_light_blue.png" alt="Trang Chủ"></a>
+                                    <a href="@Url.Action("Index", "Home")">
+                                        <img src="~/Content/Image/logo.png" alt="Trang Chủ" id="logo_img" />
+                                    </a>
                                 </div>
                                 <div class="site-slogan">
-                                    Công Ty Xây Dựng Construction
+                                    Kỹ Thuật & Xây Dựng
                                 </div>
                             </div>
                         </div>
